Mejora considerable en el algoritmo de búsqueda de notas del acorde. Editar y eliminar afinaciones personalizadas corregir. Varias posibilidades de acordes (corregir)

--- a/estilo.css
+++ b/estilo.css
@@ -82,7 +82,7 @@ main {
 #containerJuego {
     display: flex;
     width: 80vw;
-    height: 60vh;
+    height: 40vh;
 }
 
 #guitarra,
@@ -122,6 +122,12 @@ main {
 #botonesConfig {
     display: flex;
     justify-content: center;
+}
+
+#botoneraSeleccionarAcordes {
+    display: flex;
+    justify-content: center;
+    
 }
 
 .cuerda {
