--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -1,18 +1,42 @@
-header {
-    text-align: center;
-}
-
 body {
     background-color: #f5f5f5;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
     color: #333;
     margin: 0;
 }
 
-h1,
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #004599;
+    color: #ffffff;
+    padding: 1em;
+}
+
+nav {
+    display: flex;
+    justify-content: flex-end;
+    gap: 5em;
+    background-color: #004599;
+    box-shadow: none;
+}
+
+nav a {
+    font-size: large;
+    font-weight: bold;
+}
+
+h1 {
+    margin: 0; /* Elimina el margen predeterminado */
+    font-size: 2.5em; /* Tamaño de la fuente */
+}
+
 h2 {
     text-align: center;
-    font-size: 3vh;
+    margin-top: 20px; /* Espacio superior */
+    margin-bottom: 20px; /* Espacio inferior */
+    font-size: 1.5em; /* Tamaño de la fuente */
 }
 
 button {
