--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -28,15 +28,15 @@ nav a {
 }
 
 h1 {
-    margin: 0; /* Elimina el margen predeterminado */
-    font-size: 2.5em; /* Tamaño de la fuente */
+    margin: 0;
+    font-size: 2.5em;
 }
 
 h2 {
     text-align: center;
-    margin-top: 20px; /* Espacio superior */
-    margin-bottom: 20px; /* Espacio inferior */
-    font-size: 1.5em; /* Tamaño de la fuente */
+    margin-top: 20px; 
+    margin-bottom: 20px; 
+    font-size: 1.5em;
 }
 
 button {
